# fresnel

./: .bumpversion.cfg  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .yapfignore  BUILDING.rst  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog.md  ContributorAgreement.md  Doxyfile  INSTALLING.rst  LICENSE  README.md  README.rst  SourceConventions.md  fresnel.code-workspace  fresnel.sublime-project  readthedocs.yml  run-clang-format.py  setup.cfg
.azp/: azure-pipelines.yml  release.yml  test.yml
.azp/templates/: build_test.yml
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release.md
.github/workflows/: build.yml  build_test.yml  make-changelog-md.sh  make_workflows.py  release.yml  stale.yml  style_check.yml  unit_test.yml
.github/workflows/environments/: conda.yml
.github/workflows/templates/: configurations.yml  release.yml  stale.yml  unit_test.yml  workflow.yml
.jenkins/: Jenkinsfile  Jenkinsfile.jinja  make_jenkinsfile.py
CMake/: CFlagsSetup.cmake  CMakeLists.txt  FindEMBREE.cmake  FindEmbree.cmake  FindOptiX.cmake  FindQhull.cmake  FindTBB.cmake  Findembree.cmake  PythonSetup.cmake  fresnel-macros.cmake
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
doc/: Makefile  building.rst  changes.rst  community.rst  conf.py  contributing.rst  credits.rst  cuboid.py  environment.yml  gallery-alternate.rst  gallery-cover-art.rst  gallery-features.rst  gallery-research.rst  gallery.rst  index.rst  indices.rst  installation.rst  license.rst  module-camera.rst  module-color.rst  module-geometry.rst  module-interact.rst  module-light.rst  module-material.rst  module-tracer.rst  module-util.rst  module-version.rst  package-fresnel.rst  package-galileo.rst  package-trace.rst  requirements.txt  sphere.py  spheres.npz  style.rst  testing.rst
doc/_templates/: footer.html  page.html
doc/figures/: cameras.ipynb
doc/gallery/: cuboid.py  cuboid.rst  cuboids.npz  gumballs.npz  gumballs.py  gumballs.rst  protomer.rst  sphere.py  sphere.rst
fresnel/: CMakeLists.txt  __init__.py  _common.py  camera.py  color.py  conftest.py  copy_wrapper.cmake  geometry.py  interact.py  light.py  material.py  tracer.py  util.py  version.py
fresnel/common/: Camera.h  ColorMath.h  ConvexPolyhedronBuilder.cc  ConvexPolyhedronBuilder.h  GeometryMath.h  IntersectCylinder.h  IntersectEllipsoid.h  IntersectHemisphere.h  IntersectSphere.h  IntersectTriangle.h  Light.h  Material.h  RayGen.h  TracerPathMethods.h  VectorMath.h  module-common.cc
fresnel/cpu/: Array.cc  Array.h  Device.cc  Device.h  Geometry.cc  Geometry.h  GeometryConvexPolyhedron.cc  GeometryConvexPolyhedron.h  GeometryCylinder.cc  GeometryCylinder.h  GeometryEllipsoid.cc  GeometryEllipsoid.h  GeometryHemisphere.cc  GeometryHemisphere.h  GeometryMesh.cc  GeometryMesh.h  GeometryPolygon.cc  GeometryPolygon.h  GeometryPrism.cc  GeometryPrism.h  GeometrySphere.cc  GeometrySphere.h  GeometryTriangleMesh.cc  GeometryTriangleMesh.h  Scene.cc  Scene.h  Tracer.cc  Tracer.h  TracerDirect.cc  TracerDirect.h  TracerPath.cc  TracerPath.h  TracerWhitted.cc  TracerWhitted.h  Whitted.cc  Whitted.h  embree_platform.h  module-cpu.cc
fresnel/gpu/: Array.cc  Array.h  Device.cc  Device.h  Geometry.cc  Geometry.h  GeometryConvexPolyhedron.cc  GeometryConvexPolyhedron.cu  GeometryConvexPolyhedron.h  GeometryCylinder.cc  GeometryCylinder.cu  GeometryCylinder.h  GeometryEllipsoid.cc  GeometryEllipsoid.cu  GeometryEllipsoid.h  GeometryHemisphere.cc  GeometryHemisphere.cu  GeometryHemisphere.h  GeometryMesh.cc  GeometryMesh.cu  GeometryMesh.h  GeometryPolygon.cc  GeometryPolygon.cu  GeometryPolygon.h  GeometryPrism.cc  GeometryPrism.cu  GeometryPrism.h  GeometrySphere.cc  GeometrySphere.cu  GeometrySphere.h  Scene.cc  Scene.h  Tracer.cc  Tracer.h  TracerDirect.cc  TracerDirect.h  TracerIDs.h  TracerPath.cc  TracerPath.h  TracerWhitted.cc  (+7 more)
fresnel/interact/: __init__.py  qt5.py
fresnel/test/: CMakeLists.txt  conftest.py  test_camera_orthographic.py  test_camera_perspective.py  test_device.py  test_geometry_box.py  test_geometry_convex_polyhedron.py  test_geometry_cylinder.py  test_geometry_mesh.py  test_geometry_polygon.py  test_geometry_sphere.py  test_light.py  test_material.py  test_outline_material.py  test_scene.py  test_tracer_direct.py  test_tracer_path.py
fresnel/test/reference/: CMakeLists.txt
test/: conftest.py  test_camera.py  test_camera_orthographic.py  test_camera_perspective.py  test_device.py  test_geometry_box.py  test_geometry_convex_polyhedron.py  test_geometry_cylinder.py  test_geometry_mesh.py  test_geometry_polygon.py  test_geometry_sphere.py  test_light.py  test_material.py  test_outline_material.py  test_scene.py  test_tracer_direct.py  test_tracer_path.py
